[package]
name = "svgtypes"
version = "0.16.1"
license = "Apache-2.0 OR MIT"
edition = "2024"
description = "SVG types parser."
repository = "https://github.com/linebender/svgtypes"
keywords = ["svg", "parser", "tokenizer"]
categories = ["parser-implementations"]
readme = "README.md"
# Keep in sync with RUST_MIN_VER in .github/workflows/ci.yml and with the relevant README.md files.
# and with the MSRV in the `Unreleased` section of CHANGELOG.md.
rust-version = "1.85"
exclude = [".github", ".clippy.toml", ".gitignore", ".typos.toml", "benches/", "codegen/", "fuzz/"]

[workspace]
members = ["benches"]

[features]
default = ["std", "color-mix"]
std = ["kurbo/std"]
libm = ["kurbo/libm"]
color-mix = ["palette"]

[dependencies]
siphasher = "1.0" # perfect hash implementation for color names
kurbo = { version = "0.13", default-features = false } # ArcTo to CurveTo(s)
palette = { version = "0.7", optional = true, default-features = false, features = ["std"] }
